# kde-workspace

./: .gitignore  .kateproject  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ConfigureChecks.cmake  KDE4WorkspaceConfig.cmake.in  KDE4WorkspaceConfigVersion.cmake.in  KDE4WorkspaceVersion.cmake.in  README.pam  appveyor.yml  config-X11.h.cmake  config-runtime.h.cmake  config-unix.h.cmake  config-workspace.h.cmake  doxygen.conf  kde.pamd  kscreensaver.pamd  startkde.cmake
appmenu/: CMakeLists.txt  appmenu.cpp  appmenu.h  appmenu_dbus.cpp  appmenu_dbus.h  glowbar.cpp  glowbar.h  menubar.cpp  menubar.h  menubutton.cpp  menubutton.h  menuimporter.cpp  menuimporter.h  menuwidget.cpp  menuwidget.h  shadows.cpp  topmenubar.cpp  topmenubar.h  verticalmenu.cpp
doc/: CMakeLists.txt
dolphin/: CMakeLists.txt
drkonqi/: CMakeLists.txt  Messages.sh  backtracegenerator.cpp  backtracegenerator.h  backtraceratingwidget.h  backtracewidget.cpp  backtracewidget.h  backtracewidget.ui  crashedapplication.cpp  crashedapplication.h  debugger.cpp  debuggerlaunchers.cpp  debuggerlaunchers.h  debuggermanager.cpp  debuggermanager.h  debugpackageinstaller.cpp  debugpackageinstaller.h  detachedprocessmonitor.cpp  drkonqi.cpp  drkonqi.h  drkonqi_globals.h  drkonqibackends.cpp  drkonqibackends.h  drkonqidialog.cpp  drkonqidialog.h  findconfigdatajob.cpp  lldbhighlighter.cpp  lldbhighlighter.h  main.cpp  maindialog.ui  reportassistantdialog.cpp  reportassistantdialog.h  reportassistantpage.cpp  reportinterface.cpp  reportinterface.h  statuswidget.h  systeminformation.cpp  systeminformation.h
freespacenotifier/: CMakeLists.txt  freespacenotifier_prefs_base.ui  module.cpp
kate/: CMakeLists.txt  README
kcheckpass/: CMakeLists.txt  README  checkpass_etcpasswd.c  checkpass_pam.c  checkpass_shadow.c  kcheckpass.c  kcheckpass.h
kcminit/: CMakeLists.txt  Messages.sh  main.cpp
kcontrol/: CMakeLists.txt  PURPOSE
kdepasswd/: CMakeLists.txt  kdepasswd.cpp  kdepasswd.desktop  passwd.cpp  passwd.h  passwddlg.cpp  passwddlg.h  process.cpp  process.h
kdesudo/: CMakeLists.txt  config.h.cmake  kcookie.cpp  kcookie.h  kdesudo.cpp  kdesudo.h  main.cpp
kdialog/: CMakeLists.txt  kdialog.cpp  klistboxdialog.cpp  klistboxdialog.h  progressdialog.cpp  widgets.cpp  widgets.h
kdm/: CMakeLists.txt  ConfigureChecks.cmake  README  TODO  config-kdm.h.cmake  config.def
keditbookmarks/: CMakeLists.txt  actionsimpl.cpp  actionsimpl.h  bookmarkinfowidget.cpp  bookmarkinfowidget.h  bookmarkiterator.cpp  bookmarkiterator.h  bookmarklistview.cpp  bookmarklistview.h  exporters.h  favicons.cpp  favicons.h  faviconupdater.cpp  faviconupdater.h  globalbookmarkmanager.cpp  globalbookmarkmanager.h  importers.cpp  importers.h  kbookmarkmerger.cpp  kebsearchline.cpp  kebsearchline.h  keditbookmarks-genui.rc  keditbookmarks.desktop  keditbookmarksui.rc  main.cpp  testlink.cpp  testlink.h  toplevel.cpp  toplevel.h
keditfiletype/: CMakeLists.txt  Messages.sh  filegroupdetails.cpp  filegroupdetails.h  filetypedetails.cpp  filetypedetails.h  filetypes.desktop  filetypesview.cpp  filetypesview.h  keditfiletype.cpp  keditfiletype.h  kservicelistwidget.cpp  kservicelistwidget.h  kserviceselectdlg.cpp  kserviceselectdlg.h  mimetypedata.cpp  mimetypedata.h  mimetypewriter.cpp  mimetypewriter.h  newtypedlg.h  typeslistitem.h
kfind/: CMakeLists.txt  findhere.desktop  kdatecombo.cpp  kdatecombo.h  kfind.desktop  kfinddlg.cpp  kfinddlg.h  kfindtreeview.cpp  kfindtreeview.h  kftabdlg.cpp  kftabdlg.h  kquery.cpp  kquery.h
kglobalaccel/: CMakeLists.txt  Messages.sh  component.cpp  component.h  config-kglobalaccel.h.cmake  globalshortcut.cpp  globalshortcut.h  globalshortcutcontext.cpp  globalshortcutcontext.h  globalshortcutsregistry.cpp  globalshortcutsregistry.h  kglobalaccel.desktop  kglobalaccel.notifyrc  kglobalaccel_mac.cpp  kglobalaccel_qws.cpp  kglobalaccel_qws.h  kglobalaccel_x11.cpp  kglobalaccel_x11.h  kglobalacceld.cpp  kglobalacceld.h  main.cpp  org.kde.kglobalaccel.service.in
kgreeter/: 50-lightdm-kgreeter-greeter.conf  CMakeLists.txt  config-kgreeter.h.cmake  kgreeter.cpp  kgreeter.h  kgreeter.ui  lightdm-kgreeter-greeter.conf  lightdm-kgreeter-greeter.desktop  lightdm-kgreeter-greeter.desktop.cmake
kinfocenter/: CMakeLists.txt  config-infocenter.h.cmake  infocenter.cpp  infocenter.h  infokcmmodel.h  infokcmproxymodel.h  kcmcontainer.cpp  kcmcontainer.h  kinfocenter.desktop  main.cpp  sidepanel.h
kioclient/: CMakeLists.txt  Messages.sh  kioclient.cpp  kioclient.h
kioslave/: CMakeLists.txt
klipper/: CMakeLists.txt  Messages.sh  actionsconfig.ui  clipcommandprocess.cpp  configdialog.cpp  editactiondialog.cpp  editactiondialog.h  editactiondialog.ui  generalconfig.ui  history.cpp  history.h  historyimageitem.cpp  historyitem.cpp  historyitem.h  historystringitem.cpp  historyurlitem.cpp  historyurlitem.h  klipper.cpp  klipper.desktop  klipper.h  klipper.kcfg  klipperpopup.cpp  klipperpopup.h  klipperrc.desktop  main.cpp  popupproxy.cpp  tray.cpp  urlgrabber.cpp  urlgrabber.h  version.h
kmediaplayer/: CMakeLists.txt  kmediaplayer.desktop  kmediaplayerpart.cpp  kmediaplayerpart.desktop  kmediaplayerpart.h  kmediaplayerui.rc  kmediawindow.cpp  kmediawindow.h  main.cpp
kmenuedit/: CMakeLists.txt  Messages.sh  basictab.cpp  basictab.h  khotkeys.h  klinespellchecking.cpp  klinespellchecking.h  kmenuedit.cpp  kmenuedit.desktop  kmenuedit.h  main.cpp  menufile.h  menuinfo.cpp  menuinfo.h  preferencesdlg.cpp  preferencesdlg.h  treeview.cpp  treeview.h
knetattach/: CMakeLists.txt  Messages.sh  TODO  knetattach.cpp  knetattach.desktop  knetattach.h  knetattach.ui  main.cpp
knotify/: CMakeLists.txt  Messages.sh  imageconverter.cpp  imageconverter.h  kde.notifyrc  knotify.cpp  knotify.h  knotify4.desktop  knotifyconfig.cpp  knotifyplugin.cpp  knotifyplugin.h  ksolidnotify.cpp  ksolidnotify.h  main.cpp  notifybyktts.cpp  notifybyktts.h  notifybypopup.cpp  notifybypopup.h  notifybysound.cpp  notifybysound.h
konsole/: CMakeLists.txt
kpasswdserver/: CMakeLists.txt  Messages.sh  kpasswdserver.cpp  kpasswdserver.h
(+5585 files in other folders)
