add_subdirectory(kdm)
add_subdirectory(klipper)
add_subdirectory(kfontview)
add_subdirectory(kmenuedit)
add_subdirectory(ksysguard)
add_subdirectory(plasma-desktop)
add_subdirectory(kcontrol)
add_subdirectory(systemsettings)
add_subdirectory(kinfocenter)

if(POLKITQT_FOUND)
  add_subdirectory(PolicyKit-kde)
endif(POLKITQT_FOUND)

if ( UNIX )
   add_subdirectory(kdesu)
endif ( UNIX )

add_subdirectory(kcontrol)
add_subdirectory(glossary)
add_subdirectory(kdebugdialog)
add_subdirectory(khelpcenter)
add_subdirectory(kioslave)
add_subdirectory(knetattach)
add_subdirectory(onlinehelp)
add_subdirectory(documentationnotfound)
add_subdirectory(fundamentals)
add_subdirectory(plasmapkg)